--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,19 @@ footer {
     justify-content: center;
     align-items: center;
 }
+
+
+/* Product List Container  */
+
+.content {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main {
+    flex: 3 60rem;
+}
+
+.sidebar {
+    flex: 1 20rem;
+}
